--- a/block-BJaahs/code/index.html
+++ b/block-BJaahs/code/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title-->
     <title>Home |Quiz App</title>
-    <!--Stylesheet-->
-    <link rel="stylesheet" href="./stylesheets/style.css" />
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,13 +19,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <!--Header-->
-    <header></header>
-    <!--Main-->
-    <main></main>
+  <body style="font-family: 'Nunito', sans-serif">
     <script src="./index.js"></script>
   </body>
 </html>
-
-<!-- font-family: 'Nunito', sans-serif; -->
