--- a/block-BJaail/code/indexBookly.html
+++ b/block-BJaail/code/indexBookly.html
@@ -91,14 +91,14 @@
     <!--Main-->
     <main>
       <div class="container">
-        <form class="form">
+        <form>
           <label for="title">Title</label>
           <input type="text" name="title" id="title" />
           <label for="author">Author</label>
           <input type="text" name="author" id="author" />
           <label for="isbn">ISBN#</label>
           <input type="number" name="isbn" id="isbn" />
-          <button>Add Book</button>
+          <button type="submit">Add Book</button>
         </form>
 
         <div
@@ -112,9 +112,10 @@
           <h4>Title</h4>
           <h4>Author</h4>
           <h4>ISBN#</h4>
-          <h4></h4>
+          <h4>Completed</h4>
+          <h4>Remove</h4>
         </div>
-        <ul id="root"></ul>
+        <ul id="bookList"></ul>
       </div>
     </main>
     <!--Footer-->
